# hood-box-designer

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  README.md  SKILL_template.md  dieline-0201-12x9x4.dxf  pyproject.toml
backend/: main.py  pyproject.toml
backend/app/models/: __init__.py  box_spec.py  capture.py  solve.py
backend/app/routers/: __init__.py  dieline.py
backend/app/services/: __init__.py  dieline_generator.py  solve.py
backend/dieline_core/: __init__.py  flutes.py  geometry.py  scoring.py  solver.py  validate.py
backend/tests/: test_api_dieline.py  test_dieline_annotations_parity.py  test_dieline_validate.py  test_glued_joint.py  test_hsc_tube_generation.py  test_panel_solver.py  test_rsc_0201_scoring.py  test_solver.py
backend/tests/golden/: dieline_cuts_creases.json
cli/: README.md
cli/dieline_cli/: main.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/scripts/: detect-debug.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/sample/: page.tsx
frontend/src/components/: derived-scores-table.tsx  design-mode.tsx  dieline-preview-panel.tsx  dieline-preview.tsx  measurement-summary.tsx  photo-mode.tsx  photo-stage.tsx
frontend/src/lib/: dieline.ts  imperial.ts  paper-detection.ts  photo-calibration.ts  photoMeasure.test.ts  photoMeasure.ts  sample-capture.ts  solve.ts
frontend/src/types/: box.ts  capture.ts  geometry.ts  sample.ts
skills/dieline/: SKILL.md
terminals/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
(+17 files in other folders)
