[project]
name = "dieline-cli"
version = "0.1.0"
description = "Standalone CLI for generating FEFCO 0201 (RSC) corrugated dielines as DXF/SVG."
readme = "cli/README.md"
requires-python = ">=3.13"
dependencies = [
    "ezdxf>=1.4.4",
    "svgwrite>=1.4.3",
]

[project.scripts]
dieline = "dieline_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli/dieline_cli", "backend/dieline_core"]
